2002-03-03  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* update-cdb.el: Delete system-char-database-directory before
	loading system-char-db-source-file-list when updating database
	files.

2002-02-18  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* Ideograph-R001-One.el (U-00023944): Moved to
	Ideograph-R077-Stop.el.

	* Ideograph-R140-Grass.el (MH-521): New character; map to U+8362;
	unify GT-40268.

	* Ideograph-R130-Meat.el (U+81A4): Add J90-6733 into the
	`->same-ideograph'.

	* Ideograph-R109-Eye.el (C6-333D): Use `=>ucs*' instead of
	`ideograph='; use `<-original-ideograph' instead of
	`original-ideograph-of'.

	* Ideograph-R077-Stop.el (C6-232E): Don't unify U-00028E16; unify
	H1-A6EA and U-00023944; add `ideographic-structure'.

2002-02-17  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* Ideograph-R170-Mound.el (C5-232E): Unify U-00028E16.

2002-02-13  MORIOKA Tomohiko  <tomo@mousai.kanji.zinbun.kyoto-u.ac.jp>

	* u01000-Myanmar.el: Reformatted.

2002-02-06  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* u00F00-Tibetan.el: Reformatted.

2002-02-06  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* u00D80-Sinhala.el, u00D00-Malayalam.el, u00C80-Kannada.el,
	u00C00-Telugu.el, u00B80-Tamil.el, u00B00-Oriya.el: Reformatted.

2002-02-05  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* u00A80-Gujarati.el, u00A00-Gurmukhi.el, u00600-Arabic.el,
	u00400-Cyrillic.el, u00370-Greek.el,
	u002B0-Spacing-Modifier-Letters.el, u00250-IPA-Extensions.el,
	u00180-Latin-Extended-B.el, u00100-Latin-Extended-A.el,
	u000A0-Latin-1-Supplement.el, u00080-C1.el: Reformatted.

2002-02-01  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* Ideograph-R063-Door.el: Add some mappings to CJK Ext-B code
	points and Daikanwa numbers.

2002-01-31  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* Ideograph-R069-Axe.el:
	- Use `=>ucs' instead of `->ucs'.
	- Add some mappings to CJK Ext-B code points.
